<resources>
    <string name="app_name">Tasks App</string>
    <string name="title_hint">Title</string>
    <string name="title_description">Description</string>
    <string name="my_tasks_head">My Tasks</string>
    <string name="add_task_head">Add Task</string>
    <string name="due_date_label">Select a due date</string>
    <string name="play_audio">Play Audio</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="add_subtask">Add a Subtask</string>
    <string name="mark_completed">Mark as Completed</string>
    <string name="save_task">Save task</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="enter_category_hint">Enter a category name</string>
    <string name="add_category_title">Add a Category</string>
    <string name="ok">OK</string>
    <string name="category_name_empty_error">The category name should not be empty</string>
    <string name="category_added_success_msg">Category added to the list successfully</string>
    <string name="empty_title_error">Title cannot be empty</string>
    <string name="empty_description_error">Description cannot be empty</string>
    <string name="empty_due_date_error">Please select a due date</string>
    <string name="task_save_success">Task saved successfully</string>
    <string name="no_tasks_found">There are no tasks associated with selected Category!!!\n\nPlease add a task or try changing the category!!!</string>
    <string name="due_date">Due date - %s</string>
    <string name="created_on">Created on - %s</string>
    <string name="delete_task_head">Delete task</string>
    <string name="delete_task_desc">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_denied">Permission denied!!! Please try again later or go to settings to give required permissions!!!</string>
    <string name="image_removed_success">Image removed successfully</string>
    <string name="subtask_added_success_msg">Subtask Successfully added</string>
    <string name="enter_subtask_head">Enter Subtask</string>
    <string name="subtask_empty_error">Subtask title cannot be empty</string>
    <string name="subtask_complete_head">Warning</string>
    <string name="subtask_complete_body">Once completed you wont be able to access this subtask!!! Are you sure ?</string>
    <string name="subtask_remove_success">Subtask successfully marked as completed</string>
    <string name="audio_file_not_inserted_error">No Audio file inserted as of now</string>
    <string name="audio_title">Attach audio file</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="stop_audio">Stop Audio</string>
    <string name="image_delete_body">Are you sure you want to remove audio from the task ?</string>
    <string name="attached_images_head">Attached Images:</string>
    <string name="no_images_attached">No attached images</string>
    <string name="no_subtasks_attached">No subtasks attached</string>
    <string name="subtask_list_head">SubTasks Attached:</string>
    <string name="no_audio_attached">No Audio Attached</string>
    <string name="audio_attached">1 Audio attached with this task :</string>
    <string name="edit_task_head">Edit Task</string>
    <string name="task_edit_success">Task Edited Successfully</string>
    <string name="task_complete_msg">Once you mark a task complete you won\'t be able to access it again!!!\n Are you sure, you want to mark it as completed?</string>
    <string name="marked_completed">Task marked completed successfully</string>
    <string name="completed_on">Completed on- %s</string>
    <string name="edit_category">Edit Categories</string>
    <string name="delete_cat_head">Delete Category</string>
    <string name="delete_cat_desc">Are you sure you want to delete this category?</string>
    <string name="edit_cat_title">Edit Category </string>
    <string name="cat_edit_success">Category edited Successfully</string>
    <string name="notification_head">Task Reminder</string>
    <string name="notification_body_text">%s is due in a few minute(s). Click to see details.</string>
    <string name="audio_extension">.3gp</string>
    <string name="audio_path">%s%s%s%s%d%s</string>
</resources>