<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.AddNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            app:boxBackgroundColor="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_desc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_6"
            android:hint="@string/title_description"
            app:boxBackgroundColor="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="3"
                android:maxLines="3"
                android:minLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/sp_categories"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="0dp"
            android:layout_height="?attr/dropdownListPreferredItemHeight"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/grey_border_background"
            android:dropDownWidth="@dimen/dp_300"
            android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
            android:paddingEnd="@dimen/dp_10"
            android:popupBackground="@android:color/white"
            android:popupElevation="@dimen/dp_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_desc"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_due_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/grey_border_background"
            android:paddingVertical="@dimen/dp_20"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/due_date_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sp_categories"
            tools:ignore="RtlSymmetry" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_images"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_due_date"
            tools:itemCount="1"
            tools:listitem="@layout/task_images_child_layout" />

        <Button
            android:id="@+id/btn_play_audio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_6"
            android:text="@string/play_audio"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/btn_delete_audio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_images" />

        <Button
            android:id="@+id/btn_delete_audio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:text="@string/delete_audio"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_play_audio"
            app:layout_constraintTop_toTopOf="@id/btn_play_audio" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/grp_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="btn_delete_audio,btn_play_audio" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_subtasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_play_audio"
            tools:itemCount="1"
            tools:listitem="@layout/subtasks_child_view" />

        <Button
            android:id="@+id/btn_add_subtask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingVertical="@dimen/dp_10"
            android:text="@string/add_subtask"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_subtasks" />

        <Button
            android:id="@+id/btn_mark_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingVertical="@dimen/dp_10"
            android:text="@string/mark_completed"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_subtask" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_audio"
            android:visibility="invisible"
            app:backgroundTint="@color/color_fab_2"
            app:layout_constraintBottom_toTopOf="@id/fab_add_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            app:fabSize="mini"
            tools:ignore="HardcodedText" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_image"
            android:visibility="invisible"
            app:fabSize="mini"
            app:backgroundTint="@color/color_fab_1"
            app:layout_constraintBottom_toTopOf="@id/fab_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            tools:ignore="HardcodedText" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:importantForAccessibility="no"
            app:fabSize="mini"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/color_accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>